Fix: better adaptive for main-logo on small height screens

--- a/src/components/Background.css
+++ b/src/components/Background.css
@@ -5,7 +5,7 @@
   overflow: hidden;
   background-position: center;
   background-size: 300vh;
-  z-index: -5;
+  z-index: 0;
   top: 0;
   left: 0;
   transition: background-image .4s linear;
