--- a/src/components/Blur.css
+++ b/src/components/Blur.css
@@ -2,16 +2,18 @@
   position: fixed;
   width: 100%;
   height: 100vh;
-  z-index: -6;
+  /* z-index: -6; */
   opacity: 0;
   background-color: black;
   top: 0;
   left: 0;
   transition: opacity .5s ease-in-out;
+  z-index: -10;
 }
 
 .blur__layer_active {
-  z-index: 0;
+  /* z-index: 0; */
+  z-index: 10;
   opacity: .6;
   backdrop-filter: blur(3px);
 }
