--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -13,7 +13,8 @@
   font-size: 16px;
   line-height: 1.2;
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
+  z-index: 20;
 }
 
 .player__buttons-wrapper {
